# scaffold

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/scaffold/: persistence.py  utils.py
src/scaffold/cli/: base_app.py
src/scaffold/persistence/: __init__.py  model.py  repository.py  uow.py
src/scaffold/web/: __init__.py  assets.py  base_app.py  base_controller.py  csrf.py  dev_server.py  forms.py
tests/persistence/: test_repository.py  test_uow.py
