[project]
name = "scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "h11>=0.14.0",
    "psycopg[binary,pool]>=3.2.3",
    "pydantic>=2.9.2",
    "quart>=0.19.9",
    "sqlalchemy[asyncio]>=2.0.35",
    "watchfiles>=0.24.0",
    "wsproto>=1.2.0",
    "wtforms>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
